fixed overlapping divs in Completed Surveys section

--- a/src/app/student-dashboard/StudentDashboard.module.css
+++ b/src/app/student-dashboard/StudentDashboard.module.css
@@ -107,7 +107,8 @@
 
 .completedSurveyButton {
     background-color: #D0D12A;
-    width: 96%
+    width: 96%;
+    margin-bottom: 10px;
 }
 
 .assignedSurveyPanel {
